--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - "8000:8000"
     environment:
       - REDIS_URL=redis://redis:6379  # IMPORTANT: Use the *service name* not localhost
+      - FASTAPI_URI=http://fastapi:8000
+      - REDIRECT_URI=http://localhost:8000/oauth2callback
     volumes:
       - .:/app
     command: ["uvicorn", "backend.assistant_app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
