--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -15,6 +15,7 @@ SHELL ["conda", "run", "-n", "env", "/bin/bash", "-c"]
 # Activate env in future commands
 RUN echo "source activate env" >> ~/.bashrc
 ENV PATH /opt/conda/envs/env/bin:$PATH
+ENV PYTHONPATH=/app
 
 COPY . .
 
