--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ __pycache__/
 .vscode
 
 google_setup/
+backend/assistant_app/memory/vector_stores/faiss_index.bin
+backend/assistant_app/memory/vector_stores/faiss_mapping.json
