--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,8 @@ services:
     environment:
       - REDIS_URL=redis://redis:6379  # IMPORTANT: Use the *service name* not localhost
       - FASTAPI_URI=http://fastapi:8000
-      - REDIRECT_URI=http://localhost:8000/oauth2callback
+      - GOOGLE_CLIENT_SECRET_FILE=google_setup/client_secret.json
+      - GOOGLE_REDIRECT_URI=http://localhost:8000/oauth2callback
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST=postgres
