--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [tool:pytest]
 testpaths = tests
-python_files = test_*.py *_test.py
+python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = 
@@ -13,12 +13,12 @@ addopts =
     --cov-report=html:htmlcov
     --cov-report=xml
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    slow: Slow running tests
-    api: API tests
+    unit: Unit tests (fast, isolated)
+    integration: Integration tests (require external services)
+    api: API endpoint tests
     auth: Authentication tests
+    user_data: User data management tests
+    slow: Slow running tests
     vector_store: Vector store tests
     redis: Redis tests
-    database: Database tests
-    user_data: User data deletion tests 
+    database: Database tests 
