ATTRM-000069: Implement test files (#11)
implement test files + Fix lint issues

---------

Co-authored-by: Thibaut Hurson <thibaut.hurson.ext@holcim.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ __pycache__/
 .vscode
 
 google_setup/
-backend/assistant_app/memory/vector_stores/faiss_index.bin
-backend/assistant_app/memory/vector_stores/faiss_mapping.json
+backend/assistant_app/memory/vector_stores/
 
 backend/assistant_app/memory/prompt_vector_store/
